# template-py-rustlib

./: .gitignore  Cargo.toml  LICENSE  README.md  pyproject.toml  rebuild-install.sh  setup.cfg  setup.py
src/: lib.rs
